=========
Changelog
=========

1.0b15 (unreleased)
===================

- Support multiple crontabs by making ``key`` and ``filename`` configurable
  for the ``cron.CronTab`` component.


1.0b14 (2013-11-26)
===================

- Make Buildout component install zc.buildout without dependencies (which is
  just setuptools), since that can break the version pinning of setuptools.

- Check whether packages required via a ``-e`` expression in the local
  ``requirements.txt`` are already installed.

- #12946: Make full path to python executable configurable for virtualenv
  (and buildout) component.

- Remove cleanup code that removes batou-0.2-style virtualenv directories (bin,
  lib, include etc.) from remote deployments.

- Add mailto setting to crontab component.

- Added some documentation.


1.0b13 (2013-11-19)
===================

- Introduce a plugin mechanism: if a local ``requirements.txt`` file is
  present, install its contents into the ``.batou`` virtualenv.

- Load components in alphabetical order. This enables importing from other
  components (when naming the directories appropriately).

- #12986: Only try to unbundle if there actually are changes to unbundle.

- Raise an error if a cron job is configured without a timing value.

- Add platform support for Debian (crontab, logrotate, supervisor).

- Added some documentation.


1.0b12 (2013-11-04)
===================

- Added ``branch`` argument to ``mercurial.Clone``. Setting a branch
  automatically updates to the branch head on deploy. This is mostly useful for
  development environments.

- Create the 'secrets' directory if it doesn't exist, yet. Also, disallow
  editing secret files for non-existing environments.

- Support continuing remote bootstrapping if we failed after creating the
  initial remote directory but were unable to use Mercurial.

- #12898: build.Configure component was broken when using the default
  prefix.


1.0b11 (2013-10-17)
===================
